src/objects/Goal_Account_Report_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account_Segmentation__c</fullName>
        <formula>CASE(TEXT(Account__r.Account_Segmentatiobn__c), &apos;A&apos;, &apos;A&apos;, &apos;B&apos;, &apos;B&apos;, &apos;C&apos;, &apos;C&apos;, &apos;D&apos;, &apos;D&apos;, &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Goal Account Report Items</relationshipLabel>
        <relationshipName>Goal_Account_Report_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Actions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Due_Date__c</fullName>
        <formula>Goal__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <formula>Goal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Goal Account Report Items</relationshipLabel>
        <relationshipName>Goal_Account_Report_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Activity_Type__c</fullName>
        <formula>Goal__r.Premise_Activity_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise / Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Demographic__c</fullName>
        <label>Primary Demographic</label>
        <picklist>
            <picklistValues>
                <fullName>General Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State_AS_SURI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State AS SURI</label>
        <referenceTo>State_User_Report_Item__c</referenceTo>
        <relationshipLabel>Goal Account Report Items</relationshipLabel>
        <relationshipName>Goal_Account_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Accounts_AS__c</fullName>
        <formula>State_AS_SURI__r.Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Accounts (AS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Accounts_PD__c</fullName>
        <formula>State_PD_SURI__r.Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Accounts (PD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Called_On_Accounts_AS__c</fullName>
        <formula>State_AS_SURI__r.Called_On_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Called On Accounts (AS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Called_On_Accounts_PD__c</fullName>
        <formula>State_PD_SURI__r.Called_On_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Called On Accounts (PD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_PD_SURI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State PD SURI</label>
        <referenceTo>State_User_Report_Item__c</referenceTo>
        <relationshipLabel>Goal Account Report Items (State PD SURI)</relationshipLabel>
        <relationshipName>Goal_Account_Report_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.State__r.Abbreviation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_AS_SURI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User AS SURI</label>
        <referenceTo>State_User_Report_Item__c</referenceTo>
        <relationshipLabel>Goal Account Report Items (User AS SURI)</relationshipLabel>
        <relationshipName>Goal_Account_Report_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Accounts_AS__c</fullName>
        <formula>User_AS_SURI__r.Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Accounts (AS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Accounts_PD__c</fullName>
        <formula>User_PD_SURI__r.Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Accounts (PD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Called_On_Accounts_AS__c</fullName>
        <formula>User_AS_SURI__r.Called_On_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Called On Accounts (AS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Called_On_Accounts_PD__c</fullName>
        <formula>User_PD_SURI__r.Called_On_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Called On Accounts (PD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_PD_SURI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User PD SURI</label>
        <referenceTo>State_User_Report_Item__c</referenceTo>
        <relationshipLabel>Goal Account Report Items (User PD SURI)</relationshipLabel>
        <relationshipName>Goal_Account_Report_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Goal Account Report Item</label>
    <nameField>
        <displayFormat>GARI-{00000000}</displayFormat>
        <label>Goal Account Report Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Account Report Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>